--- a/Projects/xxdCmdb/web/templates/groups_list.html
+++ b/Projects/xxdCmdb/web/templates/groups_list.html
@@ -81,7 +81,6 @@
                     <!-- 表格内容结束 -->
 
                 </table>
-
                 <table class="table table-striped table-bordered">
                     <thead id="table_head">
                     <tr>
@@ -112,8 +111,12 @@
                                 <span style="display: inline-block; padding: 3px;background-color: rgb(92,184,92);border-radius: 3px;" hid="{{ host.id }}">{{ host.name }}</span>
                             {% endfor %}
                         </td>
-                        <td>
+                        <td style="width: 200px; font-size: 13px; line-height: 25px;">
+                            <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                             <a href="#" onclick="edit_group(this, {{ obj.id }})">编辑</a> |
+                            <i class="fa fa-plus-square-o" aria-hidden="true"></i>
+                            <a href="#" onclick="add_group(this, {{ obj.id }})">添加</a> |
+                            <i class="fa fa-window-close-o" aria-hidden="true"></i>
                             <a href="#" onclick="del_group({{ obj.id }})">删除</a>
                         </td>
                     </tr>
@@ -183,14 +186,40 @@
       </div>
     </div>
 
+    <!-- 添加用户组开始 -->
+    <div class="modal fade" id="add_g" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content" style="border-radius: 5px">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="exampleModalLabel">添加用户组</h4>
+              </div>
+              <form id="form1">
+              <div class="modal-body">
+                  <div class="form-group">
+                    <label for="recipient-name" class="control-label">1.用户组名称</label>
+                    <input type="text" class="form-control" id="group_name">
+                  </div>
+              </div>
+              <div class="modal-footer">
+                  <span id="error_message" style="color: red;"></span>
+                  <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                  <button id="add_groups" type="button" class="btn btn-primary">保存</button>
+              </div>
+            </form>
+            </div>
+          </div>
+        </div>
+    <!-- 添加用户组结束 -->
+
     <!-- 删除层开始 -->
     <div id="modal_delete" class="alert alert-danger alert-dismissible fade in modal-delete hide" role="alert">
         <button type="button" class="close" aria-label="Close" onclick="$.Hide('#shade,#modal_delete');"><span>×</span>
         </button>
-        <h4>确定用户信息？</h4>
+        <h4>确定删除该用户组吗？</h4>
 
         <p style="text-align: right">
-            <button type="button" class="btn btn-danger" id="do_delete_confirm">确定删除</button>
+            <button type="button" class="btn btn-danger" id="do_delete_group">确定删除</button>
             <button type="button" class="btn btn-default" onclick="$.Hide('#shade,#modal_delete');">取消</button>
         </p>
     </div>
@@ -251,6 +280,44 @@
                     traditional: true,
                     data: {'group_name': $('#ap_name').val(), 'nid': nid, 'business_1_list': $('#business_1').selectpicker('val')
                     , 'business_2_list': $('#business_2').selectpicker('val'), 'business_3_list': $('#business_3').selectpicker('val')},
+                    success: function (data_dict) {
+                        if(data_dict.status){
+                            location.reload();
+                        }else {
+                            $('#add_error_02').text(data_dict.message)
+                        }
+                    }
+                })
+            })
+        }
+        function add_group() {
+            $('#add_g').modal();
+            $('#add_groups').click(function () {
+                $.ajax({
+                    url : '/groups.html',
+                    type: 'POST',
+                    dataType: 'JSON',
+                    traditional: true,
+                    data: {'new_group_name': $('#group_name').val()},
+                    success: function (data_dict) {
+                        if(data_dict.status){
+                            location.reload();
+                        }else {
+                            $('#add_error_02').text(data_dict.message)
+                        }
+                    }
+                })
+            })
+        }
+        function del_group(nid) {
+            $.Show('#shade,#modal_delete');
+            $('#do_delete_group').click(function () {
+                $.ajax({
+                    url : '/groups.html',
+                    type: 'POST',
+                    dataType: 'JSON',
+                    traditional: true,
+                    data: {'del_group_id': nid},
                     success: function (data_dict) {
                         if(data_dict.status){
                             location.reload();
