--- a/Projects/xxdCmdb/web/templates/layout/_layread.html
+++ b/Projects/xxdCmdb/web/templates/layout/_layread.html
@@ -29,7 +29,11 @@
             <i class="fa fa-gitlab" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
             <span>项目创建</span>
         </a>
-        <a id="menu_online" class="menu-item" href="/project_list.html">
+        <a id="menu_list" class="menu-item" href="/project_list.html">
+            <i class="fa fa-th-list" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
+            <span>项目列表</span>
+        </a>
+        <a id="menu_online" class="menu-item" href="/release">
             <i class="fa fa-cloud-upload" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
             <span>项目上线</span>
         </a>
