--- a/Projects/xxdCmdb/web/templates/project_list.html
+++ b/Projects/xxdCmdb/web/templates/project_list.html
@@ -12,38 +12,38 @@
     <div style="padding: 5px 8px;">
 
         <div class="list-block">
-{#            <div class="clearfix search-area">#}
-{##}
-{#                <div class="col-md-offset-10 do-submit">#}
-{#                    <a id="search_condition_submit" class="btn btn-primary no-radius">#}
-{#                        <i class="fa fa-search"></i> 搜索#}
-{#                    </a>#}
-{#                </div>#}
-{##}
-{#                <div id="search_conditions" class="col-md-offset-2 col-md-8">#}
-{#                    <div class="condition">#}
-{#                        <div class="icons">#}
-{#                            <a class="btn btn-default no-radius" onclick="$.AddSearchCondition(this)"><i#}
-{#                                    class="fa fa-plus-square"></i></a>#}
-{#                        </div>#}
-{#                        <div class="inputs">#}
-{#                            <div class="input-group">#}
-{#                                <div id="search_condition" init="false" class="input-group-btn">#}
-{#                                    <label type="button" class="btn btn-default no-radius" style="width: 100px;">&nbsp;</label>#}
-{#                                    <button type="button" class="btn btn-default dropdown-toggle no-border-r" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></button>#}
-{#                                    <ul class="change-search-condition dropdown-menu">#}
-{##}
-{#                                    </ul>#}
-{#                                </div>#}
-{##}
-{##}
-{#                            </div>#}
-{##}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
-{##}
-{#            </div>#}
+            <div class="clearfix search-area">
+
+                <div class="col-md-offset-10 do-submit">
+                    <a id="search_condition_submit" class="btn btn-primary no-radius">
+                        <i class="fa fa-search"></i> 搜索
+                    </a>
+                </div>
+
+                <div id="search_conditions" class="col-md-offset-2 col-md-8">
+                    <div class="condition">
+                        <div class="icons">
+                            <a class="btn btn-default no-radius" onclick="$.AddSearchCondition(this)"><i
+                                    class="fa fa-plus-square"></i></a>
+                        </div>
+                        <div class="inputs">
+                            <div class="input-group">
+                                <div id="search_condition" init="false" class="input-group-btn">
+                                    <label type="button" class="btn btn-default no-radius" style="width: 100px;">&nbsp;</label>
+                                    <button type="button" class="btn btn-default dropdown-toggle no-border-r" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></button>
+                                    <ul class="change-search-condition dropdown-menu">
+
+                                    </ul>
+                                </div>
+
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
 
 {#            <div class="clearfix function-area">#}
 {#                <div class="btn-group btn-group-sm custom-btn-group">#}
@@ -65,9 +65,9 @@
 {#            </div>#}
 
             <div class="table-responsive table-area">
-                <table class="table table-striped table-bordered" style="display: none">
+                <table class="table table-striped table-bordered">
                     <!-- 表格标题开始 -->
-                    <thead id="table_head" style="display: none">
+                    <thead id="table_head">
                     <tr>
 
                     </tr>
@@ -75,46 +75,47 @@
                     <!-- 表格标题结束 -->
 
                     <!-- 表格内容开始 -->
-{#                    <tbody id="table_body" edit-mode='false'>#}
-{##}
-{#                    </tbody>#}
+                    <tbody id="table_body" edit-mode='false'>
+
+                    </tbody>
                     <!-- 表格内容结束 -->
 
                 </table>
-                <table class="table table-striped table-bordered">
-                    <thead id="table_head">
-                    <tr>
-                        <th>序号</th>
-                        <th>项目名称</th>
-                        <th>环境</th>
-                        <th>业务线</th>
-                        <th>最新发布时间</th>
-                        <th>发布ID</th>
-                        <th>状态</th>
-                        <th>操作</th>
-                    </tr>
-                    </thead>
-                <thead id="table_bodys">
-                {% for obj in data_list %}
-                    <tr>
-                        <th>{{ forloop.counter }}</th>
-                        <td>{{ obj.project_name }}</td>
-                        <td>{{ obj.business_1 }}</td>
-                        <td>{{ obj.business_2 }}</td>
-                        <td>{{ obj.ctime|date:"Y-m-d H:i:s" }}</td>
-                        <td>{{ obj.release_id }}</td>
-                        <td>{{ obj.get_status_display }}</td>
-                        <td style="width: 200px; font-size: 13px; line-height: 25px;">
-                            <i class="fa fa-edge" aria-hidden="true"></i>
-                            <a href="#" onclick="edit_group(this, {{ obj.id }})">上线</a> |
-                            <i class="fa fa-reply-all" aria-hidden="true"></i>
-                            <a href="#" onclick="del_group({{ obj.id }})">回滚</a>
-                        </td>
-                    </tr>
-                {% endfor %}
-                </thead>
 
-                </table>
+{#                <table class="table table-striped table-bordered">#}
+{#                    <thead id="table_head">#}
+{#                    <tr>#}
+{#                        <th>序号</th>#}
+{#                        <th>项目名称</th>#}
+{#                        <th>环境</th>#}
+{#                        <th>业务线</th>#}
+{#                        <th>最新发布时间</th>#}
+{#                        <th>发布ID</th>#}
+{#                        <th style="width: 62px;">状态</th>#}
+{#                        <th>操作</th>#}
+{#                    </tr>#}
+{#                    </thead>#}
+{#                <thead id="table_bodys">#}
+{#                {% for obj in data_list %}#}
+{#                    <tr>#}
+{#                        <th>{{ forloop.counter }}</th>#}
+{#                        <td>{{ obj.project_name }}</td>#}
+{#                        <td>{{ obj.business_1 }}</td>#}
+{#                        <td>{{ obj.business_2 }}</td>#}
+{#                        <td>{{ obj.ctime|date:"Y-m-d H:i:s" }}</td>#}
+{#                        <td>{{ obj.release_id }}</td>#}
+{#                        <td style="width: 100px" >{{ obj.get_status_display }}</td>#}
+{#                        <td style="width: 200px; font-size: 13px; line-height: 25px;">#}
+{#                            <i class="fa fa-edge" aria-hidden="true"></i>#}
+{#                            <a href="#" onclick="edit_group(this, {{ obj.id }})">上线</a> |#}
+{#                            <i class="fa fa-reply-all" aria-hidden="true"></i>#}
+{#                            <a href="#" onclick="del_group({{ obj.id }})">回滚</a>#}
+{#                        </td>#}
+{#                    </tr>#}
+{#                {% endfor %}#}
+{#                </thead>#}
+{##}
+{#                </table>#}
 
                 <div class="clearfix">
                     <div class="right">
@@ -237,11 +238,14 @@
 
     <script>
         $(function () {
-            $.initMenu('#menu_online');
-            $.nbDataList('/groups.html');
-            setTimeout("do_aaa()", 100);
+            $.initMenu('#menu_list');
+            $.nbDataList('/projects_list.html');
+            $('#table_body').attr('edit-mode', 'true');
+
+{#            setTimeout("do_aaa()", 100);#}
 
         });
+
         function do_aaa() {
             $('#table_bodys').children().each(function () {
                 var v = $(this).children().next().next().next().next().next().next().html();
